Source/WebCore/platform/graphics/RoundedRect.cpp
@@ -239,14 +239,14 @@ bool RoundedRect::intersectsQuad(const FloatQuad& quad) const
 
 bool RoundedRect::contains(const LayoutRect& otherRect) const
 {
-    if (!rect().contains(otherRect))
+    if (!rect().contains(otherRect) || !isRenderable())
         return false;
 
     const LayoutSize& topLeft = m_radii.topLeft();
     if (!topLeft.isEmpty()) {
         FloatPoint center = { m_rect.x() + topLeft.width(), m_rect.y() + topLeft.height() };
         if (otherRect.x() <= center.x() && otherRect.y() <= center.y()) {
-            if (!ellipseContainsPoint(center, topLeft, otherRect.location()))
+            if (!ellipseContainsPoint(center, topLeft, otherRect.minXMinYCorner()))
                 return false;
         }
     }
@@ -255,7 +255,7 @@ bool RoundedRect::contains(const LayoutRect& otherRect) const
     if (!topRight.isEmpty()) {
         FloatPoint center = { m_rect.maxX() - topRight.width(), m_rect.y() + topRight.height() };
         if (otherRect.maxX() >= center.x() && otherRect.y() <= center.y()) {
-            if (!ellipseContainsPoint(center, topRight, otherRect.location()))
+            if (!ellipseContainsPoint(center, topRight, otherRect.maxXMinYCorner()))
                 return false;
         }
     }
@@ -263,8 +263,8 @@ bool RoundedRect::contains(const LayoutRect& otherRect) const
     const LayoutSize& bottomLeft = m_radii.bottomLeft();
     if (!bottomLeft.isEmpty()) {
         FloatPoint center = { m_rect.x() + bottomLeft.width(), m_rect.maxY() - bottomLeft.height() };
-        if (otherRect.maxX() >= center.x() && otherRect.maxY() >= center.y()) {
-            if (!ellipseContainsPoint(center, bottomLeft, otherRect.location()))
+        if (otherRect.x() <= center.x() && otherRect.maxY() >= center.y()) {
+            if (!ellipseContainsPoint(center, bottomLeft, otherRect.minXMaxYCorner()))
                 return false;
         }
     }
@@ -272,8 +272,8 @@ bool RoundedRect::contains(const LayoutRect& otherRect) const
     const LayoutSize& bottomRight = m_radii.bottomRight();
     if (!bottomRight.isEmpty()) {
         FloatPoint center = { m_rect.maxX() - bottomRight.width(), m_rect.maxY() - bottomRight.height() };
-        if (otherRect.x() <= center.x() && otherRect.maxY() >= center.y()) {
-            if (!ellipseContainsPoint(center, bottomRight, otherRect.location()))
+        if (otherRect.maxX() >= center.x() && otherRect.maxY() >= center.y()) {
+            if (!ellipseContainsPoint(center, bottomRight, otherRect.maxXMaxYCorner()))
                 return false;
         }
     }
